--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ authors = [
     {name = "Tejas", email = "your.email@example.com"}
 ]
 requires-python = ">=3.8"
+dependencies = [
+    "pydantic>=2.0.0",
+]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
